<resources>
  <string name="app_name">Медцентр</string>

  <string name="title_activity_start">Медцентр</string>

  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sed justo augue. Aenean eros lacus, scelerisque in nisi eget, auctor elementum erat. Suspendisse at mi mauris. In finibus vel urna sed scelerisque. Donec ut tortor rutrum, ullamcorper nunc tristique, placerat arcu. Praesent vitae diam enim. Mauris mi nunc, lacinia quis enim eu, varius auctor lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed egestas bibendum eros vel pulvinar. Sed tempor dui at posuere varius. Ut efficitur mauris vel tincidunt eleifend. Maecenas gravida nec metus et lobortis.</string>


  <!-- DIALOG -->
  <string name="dialog_action_ok">OK</string>
  <string name="cancel">Отмена</string>
  <string name="dialog_error_title">Ошибка</string>
  <string name="dialog_auth_title">Предупреждение</string>
  <string name="dialog_auth_message">Данная функция доступна только для зарегистрированных пользователей.\nПерейти на экран авторизации?</string>
  <string name="dialog_auth_yes">Перейти</string>
  <string name="dialog_auth_cancel">Отмена</string>
  <string name="error_smth_wrong">Что-то пошло не так!</string>
  <string name="error_connection_title">Ошибка соеденения</string>
  <string name="error_connection_message">Проверте подключение к интернету</string>
  <string name="dialog_attention">Предупреждение</string>
  <string name="dialog_no_internet_message">Данная функция доступна только при наличии Интернета.\nПерейти к настройкам сети?</string>
  <string name="double_checkin_time">Вы пытаетесь записаться на уже занятое Вами время. Продолжить?</string>
  <string name="dialog_title_select_theme">Выберите тему</string>
  <string name="version">Версия %1$s</string>

  <!-- MENU -->
  <string name="menu_main">Главная</string>
  <string name="menu_booking">Записаться</string>
  <string name="menu_my_booking">Мои записи</string>
  <string name="menu_results">Результаты и архив</string>
  <string name="menu_prices">Цены</string>
  <string name="menu_sales">Акции</string>
  <string name="menu_doctors">Врачи</string>
  <string name="menu_share">Поделиться с друзьями</string>
  <string name="menu_news">Новости</string>
  <string name="menu_about">О нас</string>
  <string name="menu_settings">Настройки приложения</string>

  <!-- ERRORS -->
  <string name="wrong">Что-то пошло не так!</string>
  <string name="empty_complaint_error">Опишите подробней вашу проблему</string>

  <!--SETTINGS-->
  <string name="settings_change_language">Язык приложения</string>
  <string name="settings_terms_and_policy">Условия и политика</string>
  <string name="settings_terms_of_service">Условия использования</string>
  <string name="settings_privacy_policy">Политика конфиденциальности</string>
  <string name="settings_information">Информация</string>
  <string name="settings_our_partners">Наши партнеры</string>
  <string name="settings_about_application">О приложении</string>
  <string name="settings_notifications_title_daily">Дневное уведомление</string>
  <string name="settings_notifications_title_hourly">Часовое уведомление</string>
  <string name="settings_notifications_hourly">За %1$d ч. %2$d мин. до начала услуги</string>
  <string name="settings_notifications_minutely">За %1$d мин. до начала услуги</string>
  <string name="settings_notifications_title_night">Ночной режим</string>
  <string name="settings_notifications_night">Отключать звук с %1$s до %2$s</string>
  <string name="settings_notifications_change_start">Изменить начало</string>
  <string name="settings_notifications_change_end">Изменить конец</string>
  <string name="sent_message">Сообщение отправлено</string>
  <string name="report_problem_description">Опишите Вашу проблему:</string>
  <string name="report_problem_hint">Описание вашей проблемы</string>
  <string name="developed_by_floor12apps">Разработано в <a href="http://floor12apps.com/">floor12apps</a></string>

  <!--SETTINGS LANGUAGE-->
  <string name="dialog_title_select_language">Выберите язык</string>
  <string-array name="dialog_language" translatable="false">
    <item>Русский</item>
    <item>Українська</item>
  </string-array>

  <!--THEME COLORS-->
  <string name="pink">Розовая</string>
  <string name="blue">Синяя</string>
  <string name="green">Зеленая</string>
  <string name="yellow">Желтая</string>
  <string name="gray">Серая</string>
  <string name="purple">Фиолетовая</string>
  <string name="red">Красная</string>
  <string name="list_is_empty">Список пуст</string>
  <string name="server_error">Сервер отдыхает.</string>
  <string name="read_more">Подробней</string>
  <string name="menu_photogallery">Фотогалерея</string>
  <string name="catalog">Каталог</string>
  <string name="choose_category">Выберите катеорию</string>
  <string name="menu_favourite">Избранное</string>
  <string name="menu_catalog">Каталог</string>
  <string name="choose_staff">Выбор продукции</string>
  <string name="choose_category_dialog">Выберите категорию</string>
  <string name="contacts_hospital_name">Мед Центр</string>

  <!-- ABOU US -->
  <string name="contacts_phone_text">Контактный телефон</string>
  <string name="contacts_phone1">+380123123123</string>
  <string name="contacts_address">г. Киев\nул. Л. Руденко 6</string>
  <string name="contacts_map" translatable="false"><u>Карта</u></string>
  <string name="contacts_feedback">Отправляйте свои пожелания\nи коментарии на email:</string>
  <string name="contacts_email" translatable="false">example@gmail.com</string>
  <string name="contacts_schedule">График работы:\nЕждневно с\n9:00 до 22:00</string>
  <string name="contacts_about">О нас</string>
  <string name="contacts_website" translatable="false"><u>Перейти на веб-сайт</u></string>
  <string name="menu_contacts">Контакты</string>
  <string name="contacts_about_text">Добро пожаловать в Медико-косметологический центр ШАНТИ удобно расположившийся на улице Л.Руденко,6  всего в пяти минутах  от станции метро «Позняки».\\n      У нас работают специалисты индустрии красоты  с более чем 10 летним стажем. Приятный интерьер, внимательный и дружелюбный персонал МКЦ ШАНТИ, высококлассные специалисты с удовольствием позаботятся о вашей красоте!  ШАНТИ является центром дерматологии и врачебной косметологии.  Консультация врача-дерматолога, диагностика и удаление новообразований, избавление от морщин, лазерная эпиляция, массаж или чистка лица, инъекции, аппаратная косметология, гидроколонотерапия, СПА-процедуры с использованием Альфа-капсулы и многие другие процедуры к вашим услугам на высочайшем уровне.\\n У нас вы можете воспользоваться услугами самых креативных парикмахеров-стилистов и мастеров ногтевого сервиса.</string>
  <string name="menu_our_work">Наши работы</string>
  <string name="hide">Свернуть</string>
  <string name="more">Еще</string>

  <string name="doctors_reviews">Отзывы (%1$d)</string>
  <string name="booking">Записаться</string>
  <string name="booking_price">%1$s UAH</string>
  <string name="give_feedback">Оставить отзыв</string>
  <string name="title_write_error">Проверьте данные</string>
  <string name="any_master">Любой Специалист</string>
  <string name="booking_break">Вы точно хотите ее прервать?</string>
  <string name="booking_not_finished">Запись не закончена</string>
  <string name="error_connection">Ошибка соеденения</string>
  <string name="сheck_internet_connection">Проверте подключение к интернету</string>
  <string name="menu_my_bonus">Мои бонусы</string>
  <string name="book_create">Записаться</string>
  <string name="dialog_yes">Да</string>
  <string name="detail">Подробней</string>
  <string name="dialog_cancel">Отмена</string>
  <string name="error_time_not_available">Выбранное время уже занято!</string>
  <string name="error_empty_master">Мастер не выбран</string>
  <string name="error_empty_service">Услуга не выбрана</string>
  <string name="error_empty_date">Время не выбрано</string>
  <string name="booking_date_and_time" translatable="false">%1$s в %2$s</string>
  <string name="error_data_not_correct">Введенные данные не корректны.</string>
  <string name="error_booking_entity_not_exist">Текущей записи не существует</string>
  <string name="book_choose_specialist">Начать выбор специалиста</string>
  <string name="book_choose_service">Начать выбор услуги</string>

  <string name="booking_network_disconnect">Отсутствует интернет соединение</string>
  <string name="booking_network_disconnect_message">Вы можете записаться, позвонив по следующим телефонам:</string>
  <string name="booking_network_disconnect_phones"><u>+380441234455</u></string>

  <string name="empty_name_error">Введите имя</string>
  <string name="empty_phone_error">Введите корректно телефон</string>


  <string name="spare_time">Свободное время на</string>
  <string name="time_empty">Сведения о свободном времени отсутствуют</string>
  <string name="time_empty_descr">Вы можете записаться, позвонив по телефону:</string>

  <!--For tabs-->
  <string name="tab_services">Выбор\nуслуги</string>
  <string name="tab_time">Выбор\nвремени</string>
  <string name="tab_master">Выбор\nмастера</string>
  <string name="tab_data">Контактные\nданные</string>
  <string name="booking_service">Услуга:</string>
  <string name="booking_time">Время:</string>
  <string name="booking_master">Мастер:</string>
  <string name="booking_name">Ваше имя</string>
  <string name="booking_name_description">(как к Вам обращаться)</string>
  <string name="booking_phone">Номер мобильного телефона</string>
  <string name="booking_phone_description" translatable="false">(формат +380501234455)</string>
  <string name="booking_button">ЗАПИСАТЬСЯ</string>
  <string name="name">Имя</string>
  <string name="phone">Телефон</string>
  <string name="choose_master">Выбор Специалиста</string>
  <string name="search_service">Поиск услуги</string>

  <!-- Sales types -->
  <string-array name="sales_types" translatable="true">
    <item>Все акции</item>
    <item>Популярные</item>
  </string-array>

  <!-- Doctor detail tabs -->
  <string-array name="doctor_detail_tab_types" translatable="true">
    <item>Инфо</item>
    <item>Услуги</item>
    <item>Отзывы</item>
  </string-array>

</resources>
